-
Bug
-
Resolution: Fixed
-
Medium
-
None
-
None
-
3
-
9223372036854775807
[ 1167.675993] Lustre: DEBUG MARKER: == sanity-lfsck test 27a: LFSCK can recreate the lost local parent directory as orphan ========================================================== 23:51:38 (1760658698) [ 1167.805099] LustreError: 58422:0:(lfsck_namespace.c:4986:lfsck_namespace_double_scan()) ASSERTION( list_empty(&lad->lad_mdt_phase2_list) ) failed: [ 1167.805313] LustreError: 58422:0:(lfsck_namespace.c:4986:lfsck_namespace_double_scan()) LBUG [ 1167.805477] CPU: 1 PID: 58422 Comm: lfsck Tainted: G W O -------- - - 4.18.0 #2 [ 1167.805639] Hardware name: QEMU Standard PC (i440FX + PIIX, 1996), BIOS 1.17.0-4.fc41 04/01/2014 [ 1167.805676] Call Trace: [ 1167.805707] dump_stack+0x6e/0xa0 [ 1167.805838] lbug_with_loc.cold.3+0x5/0x4e [libcfs] [ 1167.806198] lfsck_namespace_double_scan+0xb8/0xf0 [lfsck] [ 1167.806349] lfsck_double_scan+0x3e/0x1b0 [lfsck] [ 1167.806465] ? ___cache_free+0x1c/0x1f0 [ 1167.806511] ? trace_hardirqs_on+0x1c/0xe0 [ 1167.806644] lfsck_master_engine+0x4dc/0x13e0 [lfsck] [ 1167.806802] ? _raw_spin_unlock_irqrestore+0x34/0x70 [ 1167.806832] ? _raw_spin_unlock_irqrestore+0x43/0x70 [ 1167.806857] ? lfsck_master_oit_engine+0x21a0/0x21a0 [lfsck] [ 1167.806958] kthread+0x16e/0x1a0 [ 1167.807239] ? set_kthread_struct+0x40/0x40 [ 1167.807268] ret_from_fork+0x24/0x30
bistected to:
2b5df830d4 LU-19370 lfsck: don't use ptlrpc_thread for LFSCK