LU-19486 lfsck: remove assert on phase list

lfsck_assistant_data may be put on phase list by notification
from peers, do not assert on this, but remove it in the old way.

Fixes: 2b5df83 ("LU-19370 lfsck: don't use ptlrpc_thread for LFSCK")
Signed-off-by: Lai Siyao <lai.siyao@whamcloud.com>
Change-Id: I877a25bae716a8a283eb8cf59e65d92be168018e
Reviewed-on: https://review.whamcloud.com/c/fs/lustre-release/+/61891
Tested-by: Maloo <maloo@whamcloud.com>
Reviewed-by: Andreas Dilger <adilger@whamcloud.com>
Tested-by: jenkins <devops@whamcloud.com>
Reviewed-by: Alex Zhuravlev <bzzz@whamcloud.com>
Reviewed-by: Oleg Drokin <green@whamcloud.com>